@@ -1,45 +1,12 @@
-name := """akka-http-websocket-microservices"""
-
-
-version := "1.0"
-
-val commonDependencies =  {
-  val AkkaHttpVersion   = "2.4.8"
-  Seq(
-    "com.typesafe.akka" %% "akka-http-experimental" % AkkaHttpVersion,
-    "com.typesafe.akka" %% "akka-http-testkit-experimental" % "2.4.2-RC3",
-    "org.scalatest"     %% "scalatest"                 % "2.2.6",
-    "org.mockito"       % "mockito-core"                    % "1.9.5"
-
-  )
-}
-
-lazy val projectSettings = Seq(
-  scalaVersion := "2.11.8",
-  fork in Test := true
-)
-
-def baseProject(name: String): Project = (
-  Project(name, file(name))
-    settings (projectSettings: _*)
-  )
-
-lazy val root = (
-  project.in(file("."))
-    aggregate(api, order, account)
-  )
-
-lazy val api = (
-  baseProject("api")
-    settings(libraryDependencies ++= commonDependencies)
-  )
-
-lazy val order = (
-  baseProject("order")
-    settings(libraryDependencies ++= commonDependencies)
-  )
-
-lazy val account = (
-  baseProject("account")
-    settings(libraryDependencies ++= commonDependencies)
+// This build is for this Giter8 template.
+// To test the template run `g8` or `g8Test` from the sbt session.
+// See http://www.foundweekends.org/giter8/testing.html#Using+the+Giter8Plugin for more details.
+lazy val root = (project in file(".")).
+  settings(
+    name := "akka-http-websocket-microservices",
+    test in Test := {
+      val _ = (g8Test in Test).toTask("").value
+    },
+    scriptedLaunchOpts ++= List("-Xms1024m", "-Xmx1024m", "-XX:ReservedCodeCacheSize=128m", "-XX:MaxPermSize=256m", "-Xss2m", "-Dfile.encoding=UTF-8"),
+    resolvers += Resolver.url("typesafe", url("http://repo.typesafe.com/typesafe/ivy-releases/"))(Resolver.ivyStylePatterns)
   )
